Разделил большой контреллер на 2 больших

--- a/todo
+++ b/todo
@@ -1,1 +1,3 @@
 орки ERROR [WsExceptionsHandler] Cannot read properties of undefined (reading 'punishment')
+
+Сделать тест на создание комнаты, игры, игрока
