--- a/todo
+++ b/todo
@@ -1,3 +1,5 @@
 орки ERROR [WsExceptionsHandler] Cannot read properties of undefined (reading 'punishment')
 
 Сделать тест на создание комнаты, игры, игрока
+
+сделать контроллер на получение всех карт в игре, на фронте обновлять массив без пересоздания. - облегчение передачи данных
