--- a/todo
+++ b/todo
@@ -1,2 +1,4 @@
 система проверки условий при изменениях в стадии игры и ивентах (снял шмотку)
 Сохранение игры (для теста)
+Карты - хранить в json, в json так же будет действие карты - название функции.
+В json карты УНИКАЛЬНЫ, количество копий задаётся количеством картинок в объекте.
