Надо превращать объекты в КЛАССЫ с функциями. Перелопатил все интерфесы

--- a/todo
+++ b/todo
@@ -2,3 +2,4 @@
 Сохранение игры (для теста)
 Карты - хранить в json, в json так же будет действие карты - название функции.
 В json карты УНИКАЛЬНЫ, количество копий задаётся количеством картинок в объекте.
+Переписать классы карт
